<resources>
    <string name="app_name">FusisApk_Java</string>
    <string name="etorri">Ongi etorri!</string>
    <string name="jarraitu">Jarraitu</string>
    <string name="textErabiltzailea">Erabiltzailea</string>
    <string name="textPasahitza">Pasahitza</string>
    <string name="button">Sartu</string>
    <string name="login">Login</string>
    <string name="erregistratuhemen">Erregistratu hemen</string>
    <string name="loginhemen">Logeatu hemen</string>
    <string name="erregistratu">Erregistratu</string>
    <string name="izena">Izena</string>
    <string name="abizena">Abizena</string>
    <string name="email">Email</string>
    <string name="jaiotzedata">Jaiotze data</string>
    <string name="itxiSaioa">Itxi Saioa</string>
    <string name="atzera">Atzera</string>
    <string name="workout">Workout</string>
    <string name="ariketak">Ariketak</string>
    <string name="workoutak">Workout-ak</string>
    <string name="historiala">Zure historiala</string>
    <string name="maila">Maila: </string>
    <string name="Gorde">Gorde</string>
    <string name="ezabatu">Ezabatu</string>
    <string name="workouts">Workout-ak</string>
    <string name="hasierakoa">Hasierakoa</string>
    <string name="erdimailakoa">Erdimailakoa</string>
    <string name="aurreratua">Aurreratua</string>
    <string name="historikoak">Historikoak</string>
    <string name="EzHistorikoak">Ez dago historikorik</string>
    <string name="kudeatu">Workout kudeatu</string>
    <string name="sartu">Gehitu Workout</string>
    <string name="denbora">Denbora(seg)</string>
    <string name="bideoaURL">Bideoa(URL)</string>
    <string name="BeltzFormatua">Beltz modua</string>
    <string name="Hizkuntza">Gazteleraz</string>
    <string-array name="maila_options">
        <item>Hasierakoa</item>
        <item>Erdimailakoa</item>
        <item>Aurrerakoa</item>
    </string-array>
</resources>