<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2196F3"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="screen"
        android:foregroundTint="#924343">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="41dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <EditText
                android:id="@+id/textIzena"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:background="#FBFBFB"
                android:fontFamily="@font/akshar"
                android:gravity="center|start|left"
                android:hint="@string/izena"
                android:inputType="text|textNoSuggestions"
                android:paddingStart="20px"
                android:shadowColor="#292929"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/textAbizena"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:background="#FBFBFB"
                android:fontFamily="@font/akshar"
                android:gravity="center|start|left"
                android:hint="@string/abizena"
                android:inputType="text|textNoSuggestions"
                android:paddingStart="20px"
                android:shadowColor="#292929"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/textDate"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="#FBFBFB"
                android:fontFamily="@font/akshar"
                android:gravity="center|start|left"
                android:hint="@string/jaiotzedata"
                android:inputType="text|textNoSuggestions"
                android:paddingStart="20px"
                android:shadowColor="#292929"
                android:textSize="24sp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="#FBFBFB"
                android:fontFamily="@font/akshar"
                android:gravity="center|start|left"
                android:hint="@string/email"
                android:inputType="text|textNoSuggestions"
                android:paddingStart="20px"
                android:shadowColor="#292929"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/btnItxiSaioa"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:backgroundTint="#474747"
                android:backgroundTintMode="add"
                android:text="@string/itxiSaioa"
                android:textColorHint="#6D3F3F"
                android:fontFamily="@font/akshar"
                android:textColorLink="#100B0B"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="108dp"
            android:layout_height="119dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="43dp"
            android:src="@drawable/logoblancotransparente"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toStartOf="@+id/btnAtzera"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAtzera"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="#474747"
            android:backgroundTintMode="add"
            android:text="@string/atzera"
            android:textColorHint="#6D3F3F"
            android:textColorLink="#100B0B"
            android:fontFamily="@font/akshar"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.079"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnGorde"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="#474747"
            android:backgroundTintMode="add"
            android:text="@string/Gorde"
            android:textColorHint="#6D3F3F"
            android:fontFamily="@font/akshar"
            android:textColorLink="#100B0B"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.401"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>