<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="@color/background"
    android:backgroundTintMode="add"
    tools:context=".fragments.LehengoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background">

        <Button
            android:id="@+id/buttonjarraitu"
            android:layout_width="245dp"
            android:layout_height="63dp"
            android:layout_marginStart="139dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="165dp"
            android:backgroundTint="#2196F3"
            android:text="@string/jarraitu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_dark_mode" />

        <TextView
            android:id="@+id/textOngiEtorri"
            android:layout_width="313dp"
            android:layout_height="97dp"
            android:layout_marginStart="101dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="66dp"
            android:gravity="center"
            android:text="@string/etorri"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintBottom_toTopOf="@+id/switch_dark_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="309dp"
            android:layout_height="283dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fusisblanco" />

        <Switch
            android:id="@+id/switch_dark_mode"
            android:layout_width="276dp"
            android:layout_height="100dp"
            android:layout_marginStart="122dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="112dp"
            android:checked="false"
            android:fontFamily="@font/akshar"
            android:text="@string/BeltzFormatua"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textOngiEtorri"
            tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>